codex-rs/tui2/src/bottom_pane/snapshots/codex_tui2__bottom_pane__chat_composer__tests__footer_mode_hidden_while_typing.snap
---
source: tui2/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› h                                                                                                 "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  [plan] · 100% context left                                                                        "
